crates/tokio-otp/tests/ui/topology/metadata_unknown_option.stderr
error: expected `metadata`
  --> tests/ui/topology/metadata_unknown_option.rs:15:12
   |
15 | #[topology(bogus)]
   |            ^^^^^
